--- a/src/styles/FAQ.css
+++ b/src/styles/FAQ.css
@@ -3,10 +3,38 @@
     max-width: 800px;
     margin: 30px auto;
     padding: 20px;
-    background: #c7d4c8;
+    background: #49a350;
     border-radius: 8px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     transition: background 0.3s ease-in-out;
+  }
+
+  .faq-bg {
+    padding: 20px;
+    min-height: 100vh;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.3rem;
+    color: #333;
+    flex: 1;
+    overflow: hidden;
+  }
+  
+  
+  .faq-bg::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url("../images/random-background-6.jpg") no-repeat center center;
+    background-size: cover;
+    filter: blur(4px);
+    z-index: -1;
   }
   
   /* Dark Mode */
@@ -40,7 +68,7 @@
     width: 100%;
     padding: 10px;
     margin: 10px 0;
-    border: 1px solid #ccc;
+    border: 1px solid #6acc96;
     border-radius: 5px;
   }
   
